--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.6",
     "vue-class-component": "^6.1.0",
+    "vue-i18n": "^7.3.2",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.6",
     "vuex": "^3.0.1",
@@ -131,6 +132,7 @@
     "generate-changelog": "^1.5.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "jest-vue-preprocessor": "^1.3.1",
     "lodash": "^4.17.4",
