chore: add codecov and separate ci script

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "build": "npm run build:client && npm run build:isomorphic && npm run build:server",
     "test": "cross-env NODE_ENV=test jest",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "ci": "npm run test:coverage",
+    "postci": "codecov -f ./coverage/*.json",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
@@ -125,6 +127,7 @@
     "@types/serve-favicon": "^2.2.30",
     "@types/webpack": "^3.8.1",
     "@types/webpack-merge": "^4.1.1",
+    "codecov": "^3.0.0",
     "copy-webpack-plugin": "^4.2.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
