--- a/package.json
+++ b/package.json
@@ -18,40 +18,45 @@
   ],
   "author": "Johannes Werner <johannes.werner86@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/devCrossNet/vue-starter",
   "bugs": {
     "url": "https://github.com/devCrossNet/vue-starter/issues"
   },
-  "homepage": "https://github.com/devCrossNet/vue-starter",
   "scripts": {
+    "g": "npm run generate",
+    "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test": "cross-env NODE_ENV=test jest",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "build": "npm run build:client && npm run build:isomorphic && npm run build:server",
     "postinstall": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
     "generate": "plop --plopfile ./generators/index.js",
-    "g": "npm run generate",
     "clean": "rimraf ./dist ./coverage",
+    "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node ./dist/server/server.js",
     "dev:dev-server": "webpack -d --config ./config/webpack.dev-server.config.js --progress --hide-modules",
     "dev:server": "webpack -d --config ./config/webpack.server.config.js --progress --hide-modules",
     "predev": "npm run clean",
-    "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
     "build:client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.config.js --progress --hide-modules",
     "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js --progress --hide-modules",
     "prebuild": "npm run clean",
-    "build": "npm run build:client && npm run build:isomorphic && npm run build:server",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
-    "ci": "npm run test:coverage",
-    "postci": "codecov -f ./coverage/*.json",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
     "commitmsg": "validate-commit-msg",
-    "precommit": "npm run lint && npm run test"
+    "precommit": "npm run lint && npm run test",
+    "preci":"npm run build",
+    "ci": "npm run lint && npm run test:coverage",
+    "postci": "codecov -f ./coverage/*.json"
   },
   "jest": {
     "globals": {
       "window": true
     },
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
     "moduleFileExtensions": [
       "js",
       "vue",
@@ -72,6 +77,9 @@
         "statements": 100
       }
     },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
     "testURL": "http://localhost:3000/"
   },
   "config": {
@@ -110,52 +118,51 @@
     "express": "^4.16.2",
     "lru-cache": "^4.1.1",
     "serve-favicon": "^2.4.5",
-    "vue": "^2.5.6",
-    "vue-class-component": "^6.1.0",
-    "vue-i18n": "^7.3.2",
+    "vue": "^2.5.13",
+    "vue-i18n": "^7.3.3",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.6",
+    "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
+    "@types/express": "^4.11.0",
     "@types/html-webpack-plugin": "^2.30.1",
-    "@types/jest": "^21.1.6",
-    "@types/lodash": "^4.14.85",
-    "@types/node": "^8.0.53",
+    "@types/jest": "^21.1.8",
+    "@types/lodash": "^4.14.91",
+    "@types/node": "^8.5.2",
     "@types/serve-favicon": "^2.2.30",
     "@types/webpack": "^3.8.1",
     "@types/webpack-merge": "^4.1.1",
     "codecov": "^3.0.0",
-    "copy-webpack-plugin": "^4.2.1",
-    "cross-env": "^5.1.1",
+    "copy-webpack-plugin": "^4.3.1",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
-    "generate-changelog": "^1.5.0",
+    "file-loader": "^1.1.6",
+    "generate-changelog": "^1.7.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
+    "jest": "^22.0.4",
     "jest-vue-preprocessor": "^1.3.1",
     "lodash": "^4.17.4",
-    "node-sass": "^4.7.1",
-    "plop": "^1.9.0",
+    "node-sass": "^4.7.2",
+    "plop": "^1.9.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "ts-jest": "^21.2.3",
-    "ts-loader": "^3.1.1",
+    "ts-jest": "^22.0.0",
+    "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
+    "typescript": "^2.6.2",
     "validate-commit-msg": "^2.14.0",
-    "vue-jest": "^1.0.3",
-    "vue-loader": "^13.5.0",
+    "vue-jest": "^1.4.0",
+    "vue-loader": "^13.6.1",
     "vue-ssr-webpack-plugin": "^3.0.0",
-    "vue-template-compiler": "^2.5.6",
-    "vue-test-utils": "^1.0.0-beta.5",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0",
+    "vue-template-compiler": "^2.5.13",
+    "vue-test-utils": "^1.0.0-beta.9",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.3",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1"
   }
 }
