--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
-    "preci":"npm run build",
+    "preci": "npm run build",
     "ci": "npm run lint && npm run test:coverage",
     "postci": "codecov -f ./coverage/*.json"
   },
@@ -115,6 +115,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "compression": "^1.7.1",
     "express": "^4.16.2",
     "lru-cache": "^4.1.1",
     "serve-favicon": "^2.4.5",
@@ -135,6 +136,7 @@
     "@types/webpack": "^3.8.1",
     "@types/webpack-merge": "^4.1.1",
     "codecov": "^3.0.0",
+    "compression-webpack-plugin": "^1.1.3",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
@@ -150,6 +152,7 @@
     "plop": "^1.9.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
+    "serviceworker-webpack-plugin": "^0.2.3",
     "ts-jest": "^22.0.0",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
