--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.13",
     "vue-i18n": "^7.3.3",
+    "vue-meta": "^1.4.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1",
