chore: remove postinstall script

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "npm run build:client && npm run build:isomorphic && npm run build:server",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
-    "postinstall": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
-    "generate": "plop --plopfile ./generators/index.js",
+    "build:generators": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
+    "generate": "npm run build:generators && plop --plopfile ./generators/index.js",
     "clean": "rimraf ./dist ./coverage",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node ./dist/server/server.js",
