chore: optimize build time

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "test": "cross-env NODE_ENV=test jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "build": "npm run build:client && npm run build:isomorphic && npm run build:server",
+    "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
     "build:generators": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
     "generate": "npm run build:generators && plop --plopfile ./generators/index.js",
@@ -37,9 +37,9 @@
     "dev:dev-server": "webpack -d --config ./config/webpack.dev-server.config.js --progress --hide-modules",
     "dev:server": "webpack -d --config ./config/webpack.server.config.js --progress --hide-modules",
     "predev": "npm run clean",
-    "build:client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.config.js --progress --hide-modules",
-    "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js --progress --hide-modules",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.config.js",
+    "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
@@ -47,7 +47,7 @@
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "preci": "npm run build",
-    "ci": "npm run lint && npm run test:coverage",
+    "ci": "concurrently \"npm run lint\" \"npm run test:coverage -- --silent\"",
     "postci": "codecov -f ./coverage/*.json"
   },
   "jest": {
@@ -140,6 +140,7 @@
     "@types/webpack-merge": "^4.1.1",
     "codecov": "^3.0.0",
     "compression-webpack-plugin": "^1.1.3",
+    "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
