--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
+    "extract-i18n-messages": "tsc ./scripts/extract-i18n-messages.ts && node ./scripts/extract-i18n-messages.js",
     "build:generators": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
     "generate": "npm run build:generators && plop --plopfile ./generators/index.js",
     "clean": "rimraf ./dist ./coverage",
@@ -47,7 +48,7 @@
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "preci": "npm run build",
-    "ci": "concurrently \"npm run lint\" \"npm run test:coverage -- --silent\"",
+    "ci": "concurrently \"npm run lint\" \"npm run test:coverage\"",
     "postci": "codecov -f ./coverage/*.json"
   },
   "jest": {
@@ -111,7 +112,8 @@
       "subjectPatternErrorMsg": "subject does not match subject pattern!",
       "helpMessage": "",
       "autoFix": false
-    }
+    },
+    "supported-languages": ["de-DE", "en-En", "pt-BR"]
   },
   "dependencies": {
     "animejs": "^2.2.0",
@@ -131,6 +133,7 @@
   "devDependencies": {
     "@types/animejs": "^2.0.0",
     "@types/express": "^4.11.0",
+    "@types/glob": "^5.0.34",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
@@ -146,6 +149,7 @@
     "css-loader": "^0.28.8",
     "file-loader": "^1.1.6",
     "generate-changelog": "^1.7.0",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
