--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "test": "cross-env NODE_ENV=test jest",
+    "e2e": "cypress run --browser chrome",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
@@ -55,8 +56,9 @@
     "globals": {
       "window": true
     },
+    "rootDir": "./src",
     "setupFiles": [
-      "./jestsetup.js"
+      "../jestsetup.js"
     ],
     "moduleFileExtensions": [
       "js",
@@ -65,8 +67,8 @@
       "json"
     ],
     "transform": {
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".*\\.(vue)$": "<rootDir>../node_modules/vue-jest",
+      ".(ts|tsx)": "<rootDir>../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "mapCoverage": true,
@@ -81,7 +83,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
-    "testURL": "http://localhost:3000/"
+    "testURL": "http://localhost:3000"
   },
   "config": {
     "validate-commit-msg": {
@@ -113,7 +115,11 @@
       "helpMessage": "",
       "autoFix": false
     },
-    "supported-languages": ["de-DE", "en-En", "pt-BR"]
+    "supported-languages": [
+      "de-DE",
+      "en-En",
+      "pt-BR"
+    ]
   },
   "dependencies": {
     "animejs": "^2.2.0",
@@ -147,6 +153,7 @@
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
+    "cypress": "^1.4.1",
     "file-loader": "^1.1.6",
     "generate-changelog": "^1.7.0",
     "glob": "^7.1.2",
