--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
+    "coverageDirectory": "../coverage",
     "testURL": "http://localhost:3000"
   },
   "config": {
@@ -125,7 +126,10 @@
     "animejs": "^2.2.0",
     "axios": "^0.17.1",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
+    "deepmerge": "^2.0.1",
     "express": "^4.16.2",
+    "js-cookie": "^2.2.0",
     "lru-cache": "^4.1.1",
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.13",
@@ -138,10 +142,13 @@
   },
   "devDependencies": {
     "@types/animejs": "^2.0.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/deepmerge": "^1.3.3",
     "@types/express": "^4.11.0",
     "@types/glob": "^5.0.34",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jest": "^22.0.1",
+    "@types/js-cookie": "^2.1.0",
     "@types/lodash": "^4.14.92",
     "@types/node": "^8.5.7",
     "@types/serve-favicon": "^2.2.30",
