chore: update dependencies (#30)

--- a/package.json
+++ b/package.json
@@ -133,8 +133,8 @@
     "lru-cache": "^4.1.1",
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.13",
-    "vue-i18n": "^7.3.3",
-    "vue-meta": "^1.4.0",
+    "vue-i18n": "^7.4.0",
+    "vue-meta": "^1.4.2",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
     "vuex": "^3.0.1",
@@ -150,10 +150,11 @@
     "@types/jest": "^22.0.1",
     "@types/js-cookie": "^2.1.0",
     "@types/lodash": "^4.14.92",
-    "@types/node": "^8.5.7",
+    "@types/node": "^9.3.0",
     "@types/serve-favicon": "^2.2.30",
     "@types/webpack": "^3.8.2",
     "@types/webpack-merge": "^4.1.1",
+    "@vue/test-utils": "^1.0.0-beta.10",
     "codecov": "^3.0.0",
     "compression-webpack-plugin": "^1.1.3",
     "concurrently": "^3.5.1",
@@ -167,7 +168,7 @@
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.0.4",
+    "jest": "^22.0.6",
     "jest-vue-preprocessor": "^1.3.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
@@ -177,17 +178,16 @@
     "serviceworker-webpack-plugin": "^0.2.3",
     "ts-jest": "^22.0.1",
     "ts-loader": "^3.2.0",
-    "tslint": "^5.8.0",
+    "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "validate-commit-msg": "^2.14.0",
     "vue-jest": "^1.4.0",
-    "vue-loader": "^13.6.2",
+    "vue-loader": "^13.7.0",
     "vue-ssr-webpack-plugin": "^3.0.0",
     "vue-template-compiler": "^2.5.13",
-    "vue-test-utils": "^1.0.0-beta.9",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^2.0.3",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1"
   },
