refactor: move scripts/generators to ./tools, use tsc instead of webpack (#32)

--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -11,7 +11,11 @@
     "target": "es6",
     "skipLibCheck": true
   },
+  "include":[
+    "./**/*.ts"
+  ],
   "exclude": [
-    "../node_modules"
+    "../node_modules",
+    "./tools.spec.ts"
   ]
 }
