--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .DS_Store
 .idea
-node_modules/
-dist/
+node_modules
+dist
 npm-debug.log
 coverage
-generators/index.js
-scripts/*.js
+tools/**/*.js
 cypress/screenshots
 cypress/videos
