--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
     "g": "npm run generate",
     "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:tools": "cross-env NODE_ENV=test jest --config=./tools/jest.config.json",
     "test": "cross-env NODE_ENV=test jest",
     "e2e": "cypress run --browser chrome",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c tslint.json './src/**/*.ts' './tools/*.ts'",
     "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
-    "extract-i18n-messages": "./node_modules/.bin/tsc -p ./scripts/ && node ./scripts/extract-i18n-messages.js",
-    "build:generators": "webpack --config ./generators/webpack.config.js --progress --hide-modules",
-    "generate": "npm run build:generators && plop --plopfile ./generators/index.js",
-    "clean": "rimraf ./dist ./coverage",
+    "extract-i18n-messages": "npm run compile-tools && node ./tools/scripts/extract-i18n-messages.js",
+    "generate": "npm run compile-tools && plop --plopfile ./tools/generators/index.js",
+
+    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
+
+    "compile-tools": "./node_modules/.bin/tsc -p ./tools/",
+    "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js",
     "start": "node ./dist/server/server.js",
     "dev:dev-server": "webpack -d --config ./config/webpack.dev-server.config.js --progress --hide-modules",
     "dev:server": "webpack -d --config ./config/webpack.server.config.js --progress --hide-modules",
@@ -43,9 +49,7 @@
     "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean",
-    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
-    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
+
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "preci": "npm run build",
@@ -116,6 +120,7 @@
       "helpMessage": "",
       "autoFix": false
     },
+    "default-language": "en-EN",
     "supported-languages": [
       "de-DE",
       "en-EN",
@@ -149,10 +154,10 @@
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jest": "^22.0.1",
     "@types/js-cookie": "^2.1.0",
-    "@types/lodash": "^4.14.92",
+    "@types/lodash.lowerfirst": "^4.3.3",
     "@types/node": "^9.3.0",
     "@types/serve-favicon": "^2.2.30",
-    "@types/webpack": "^3.8.2",
+    "@types/webpack": "^3.8.3",
     "@types/webpack-merge": "^4.1.1",
     "@vue/test-utils": "^1.0.0-beta.10",
     "codecov": "^3.0.0",
@@ -160,7 +165,7 @@
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.9",
     "cypress": "^1.4.1",
     "file-loader": "^1.1.6",
     "generate-changelog": "^1.7.0",
@@ -168,9 +173,10 @@
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.0.6",
+    "jest": "^22.1.4",
     "jest-vue-preprocessor": "^1.3.1",
-    "lodash": "^4.17.4",
+    "lodash.lowerfirst": "^4.3.1",
+    "nixt": "^0.5.0",
     "node-sass": "^4.7.2",
     "plop": "^1.9.1",
     "rimraf": "^2.6.2",
