feat(css): add postcss plugins

--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
     "extract-i18n-messages": "npm run compile-tools && node ./tools/scripts/extract-i18n-messages.js",
     "generate": "npm run compile-tools && plop --plopfile ./tools/generators/index.js",
-
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
-
     "compile-tools": "./node_modules/.bin/tsc -p ./tools/",
     "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js",
     "start": "node ./dist/server/server.js",
@@ -49,7 +47,6 @@
     "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean",
-
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "preci": "npm run build",
@@ -160,12 +157,15 @@
     "@types/webpack": "^3.8.3",
     "@types/webpack-merge": "^4.1.1",
     "@vue/test-utils": "^1.0.0-beta.10",
+    "autoprefixer": "^7.2.5",
     "codecov": "^3.0.0",
     "compression-webpack-plugin": "^1.1.3",
     "concurrently": "^3.5.1",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
+    "css-mqpacker": "^6.0.1",
+    "cssnano": "^3.10.0",
     "cypress": "^1.4.1",
     "file-loader": "^1.1.6",
     "generate-changelog": "^1.7.0",
