fix(i18n): set defaultLang from acceptLang if no defaultLang is specified in cookies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-starter",
   "version": "0.0.0",
-  "description": "A Vue.js boilerplate to build isomorphic web apps",
+  "description": "An enterprise ready boilerplate for isomorphic, progressive web apps with Vue.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/devCrossNet/vue-starter.git"
