--- a/package.json
+++ b/package.json
@@ -125,79 +125,79 @@
     ]
   },
   "dependencies": {
-    "accept-language": "^3.0.18",
-    "animejs": "^2.2.0",
-    "axios": "^0.17.1",
-    "compression": "^1.7.1",
-    "cookie-parser": "^1.4.3",
-    "deepmerge": "^2.0.1",
-    "express": "^4.16.2",
-    "js-cookie": "^2.2.0",
-    "lru-cache": "^4.1.1",
-    "serve-favicon": "^2.4.5",
-    "vue": "^2.5.13",
-    "vue-i18n": "^7.4.1",
-    "vue-meta": "^1.4.2",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.13",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
+    "accept-language": "3.0.18",
+    "animejs": "2.2.0",
+    "axios": "0.17.1",
+    "compression": "1.7.1",
+    "cookie-parser": "1.4.3",
+    "deepmerge": "2.0.1",
+    "express": "4.16.2",
+    "js-cookie": "2.2.0",
+    "lru-cache": "4.1.1",
+    "serve-favicon": "2.4.5",
+    "vue": "2.5.13",
+    "vue-i18n": "7.4.1",
+    "vue-meta": "1.4.2",
+    "vue-router": "3.0.1",
+    "vue-server-renderer": "2.5.13",
+    "vuex": "3.0.1",
+    "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@types/animejs": "^2.0.0",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/deepmerge": "^1.3.3",
-    "@types/express": "^4.11.0",
-    "@types/glob": "^5.0.35",
-    "@types/html-webpack-plugin": "^2.30.1",
-    "@types/jest": "^22.1.0",
-    "@types/js-cookie": "^2.1.0",
-    "@types/lodash.lowerfirst": "^4.3.3",
-    "@types/node": "^9.4.0",
-    "@types/serve-favicon": "^2.2.30",
-    "@types/webpack": "^3.8.4",
-    "@types/webpack-merge": "^4.1.1",
-    "@vue/test-utils": "^1.0.0-beta.10",
-    "autoprefixer": "^7.2.5",
-    "codecov": "^3.0.0",
-    "compression-webpack-plugin": "^1.1.3",
-    "concurrently": "^3.5.1",
-    "copy-webpack-plugin": "^4.3.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "css-mqpacker": "^6.0.2",
-    "cssnano": "^3.10.0",
-    "cypress": "^1.4.1",
-    "file-loader": "^1.1.6",
-    "generate-changelog": "^1.7.0",
-    "glob": "^7.1.2",
-    "hard-source-webpack-plugin": "^0.5.16",
-    "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.1.4",
-    "jest-vue-preprocessor": "^1.3.1",
-    "lodash.lowerfirst": "^4.3.1",
-    "nixt": "^0.5.0",
-    "node-sass": "^4.7.2",
-    "plop": "^1.9.1",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "serviceworker-webpack-plugin": "^0.2.3",
-    "ts-jest": "^22.0.1",
-    "ts-loader": "^3.3.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.14.0",
-    "vue-jest": "^2.0.0",
-    "vue-loader": "^13.7.0",
-    "vue-ssr-webpack-plugin": "^3.0.0",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "@types/animejs": "2.0.0",
+    "@types/cookie-parser": "1.4.1",
+    "@types/deepmerge": "1.3.3",
+    "@types/express": "4.11.0",
+    "@types/glob": "5.0.35",
+    "@types/html-webpack-plugin": "2.30.1",
+    "@types/jest": "22.1.0",
+    "@types/js-cookie": "2.1.0",
+    "@types/lodash.lowerfirst": "4.3.3",
+    "@types/node": "9.4.0",
+    "@types/serve-favicon": "2.2.30",
+    "@types/webpack": "3.8.4",
+    "@types/webpack-merge": "4.1.1",
+    "@vue/test-utils": "1.0.0-beta.10",
+    "autoprefixer": "7.2.5",
+    "codecov": "3.0.0",
+    "compression-webpack-plugin": "1.1.3",
+    "concurrently": "3.5.1",
+    "copy-webpack-plugin": "4.3.1",
+    "cross-env": "5.1.3",
+    "css-loader": "0.28.9",
+    "css-mqpacker": "6.0.2",
+    "cssnano": "3.10.0",
+    "cypress": "1.4.1",
+    "file-loader": "1.1.6",
+    "generate-changelog": "1.7.0",
+    "glob": "7.1.2",
+    "hard-source-webpack-plugin": "0.5.16",
+    "html-webpack-plugin": "2.30.1",
+    "husky": "0.14.3",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "22.1.4",
+    "jest-vue-preprocessor": "1.3.1",
+    "lodash.lowerfirst": "4.3.1",
+    "nixt": "0.5.0",
+    "node-sass": "4.7.2",
+    "plop": "1.9.1",
+    "rimraf": "2.6.2",
+    "sass-loader": "6.0.6",
+    "serviceworker-webpack-plugin": "0.2.3",
+    "ts-jest": "22.0.1",
+    "ts-loader": "3.3.1",
+    "tslint": "5.9.1",
+    "typescript": "2.6.2",
+    "validate-commit-msg": "2.14.0",
+    "vue-jest": "1.4.0",
+    "vue-loader": "13.7.0",
+    "vue-ssr-webpack-plugin": "3.0.0",
+    "vue-template-compiler": "2.5.13",
+    "webpack": "3.10.0",
+    "webpack-bundle-analyzer": "2.9.2",
+    "webpack-dev-middleware": "2.0.4",
+    "webpack-hot-middleware": "2.21.0",
+    "webpack-merge": "4.1.1"
   },
   "engines": {
     "node": "8.9.4",
