--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "jest": "22.1.4",
     "jest-vue-preprocessor": "1.3.1",
     "lodash.lowerfirst": "4.3.1",
+    "lodash.upperfirst": "^4.3.1",
     "nixt": "0.5.0",
     "node-sass": "4.7.2",
     "plop": "1.9.1",
