--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
   },
   "devDependencies": {
     "@types/animejs": "2.0.0",
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "1.3.3",
     "@types/express": "4.11.0",
@@ -160,6 +161,7 @@
     "@types/webpack-merge": "4.1.1",
     "@vue/test-utils": "1.0.0-beta.10",
     "autoprefixer": "7.2.5",
+    "axios-mock-adapter": "^1.12.0",
     "codecov": "3.0.0",
     "compression-webpack-plugin": "1.1.3",
     "concurrently": "3.5.1",
