--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "lru-cache": "4.1.1",
     "serve-favicon": "2.4.5",
     "vue": "2.5.13",
-    "vue-i18n": "7.4.1",
+    "vue-i18n": "7.4.2",
     "vue-meta": "1.4.2",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.13",
@@ -148,36 +148,37 @@
     "@types/axios-mock-adapter": "^1.10.0",
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "1.3.3",
-    "@types/express": "4.11.0",
+    "@types/express": "4.11.1",
     "@types/glob": "5.0.35",
     "@types/html-webpack-plugin": "2.30.1",
-    "@types/jest": "22.1.0",
+    "@types/jest": "22.1.1",
     "@types/js-cookie": "2.1.0",
     "@types/lodash.lowerfirst": "4.3.3",
-    "@types/node": "9.4.0",
+    "@types/node": "9.4.2",
     "@types/serve-favicon": "2.2.30",
-    "@types/webpack": "3.8.4",
+    "@types/webpack": "3.8.5",
     "@types/webpack-dev-middleware": "^2.0.0",
     "@types/webpack-merge": "4.1.1",
-    "@vue/test-utils": "1.0.0-beta.10",
+    "@vue/test-utils": "1.0.0-beta.11",
     "autoprefixer": "7.2.5",
-    "axios-mock-adapter": "^1.12.0",
+    "axios-mock-adapter": "^1.13.1",
+    "babel-preset-env": "^1.6.1",
     "codecov": "3.0.0",
-    "compression-webpack-plugin": "1.1.3",
+    "compression-webpack-plugin": "1.1.6",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.3.1",
     "cross-env": "5.1.3",
     "css-loader": "0.28.9",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
-    "cypress": "1.4.1",
+    "cypress": "1.4.2",
     "file-loader": "1.1.6",
     "generate-changelog": "1.7.0",
     "glob": "7.1.2",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "22.1.4",
+    "jest": "22.2.1",
     "jest-vue-preprocessor": "1.3.1",
     "lodash.lowerfirst": "4.3.1",
     "lodash.upperfirst": "^4.3.1",
@@ -187,17 +188,17 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "serviceworker-webpack-plugin": "0.2.3",
-    "ts-jest": "22.0.1",
-    "ts-loader": "3.3.1",
+    "ts-jest": "22.0.3",
+    "ts-loader": "3.5.0",
     "tslint": "5.9.1",
-    "typescript": "2.6.2",
+    "typescript": "2.7.1",
     "validate-commit-msg": "2.14.0",
-    "vue-jest": "1.4.0",
-    "vue-loader": "13.7.0",
+    "vue-jest": "2.0.1",
+    "vue-loader": "14.1.1",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.13",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2",
+    "webpack-bundle-analyzer": "2.10.0",
     "webpack-dev-middleware": "2.0.4",
     "webpack-hot-middleware": "2.21.0",
     "webpack-merge": "4.1.1"
