--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "deepmerge": "2.0.1",
     "express": "4.16.2",
     "js-cookie": "2.2.0",
+    "lodash": "^4.17.5",
     "lru-cache": "4.1.1",
     "serve-favicon": "2.4.5",
     "vue": "2.5.13",
@@ -153,7 +154,7 @@
     "@types/html-webpack-plugin": "2.30.1",
     "@types/jest": "22.1.1",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash.lowerfirst": "4.3.3",
+    "@types/lodash": "^4.14.102",
     "@types/node": "9.4.2",
     "@types/serve-favicon": "2.2.30",
     "@types/webpack": "3.8.5",
@@ -180,8 +181,6 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "22.2.1",
     "jest-vue-preprocessor": "1.3.1",
-    "lodash.lowerfirst": "4.3.1",
-    "lodash.upperfirst": "^4.3.1",
     "nixt": "0.5.0",
     "node-sass": "4.7.2",
     "plop": "1.9.1",
