--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:tools": "cross-env NODE_ENV=test jest --config=./tools/jest.config.json",
     "test": "cross-env NODE_ENV=test jest",
     "e2e": "cypress run --browser chrome",
-    "lint": "tslint -c tslint.json './src/**/*.ts' './tools/*.ts'",
+    "lint": "tslint -c tslint.json './src/**/*.ts' './tools/**/*.ts'",
     "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
     "analyze-bundle": "cross-env ANALYZE=true npm run build:client",
     "extract-i18n-messages": "npm run compile-tools && node ./tools/scripts/extract-i18n-messages.js",
@@ -138,7 +138,7 @@
     "serve-favicon": "2.4.5",
     "vue": "2.5.13",
     "vue-i18n": "7.4.2",
-    "vue-meta": "1.4.2",
+    "vue-meta": "1.4.3",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.13",
     "vuex": "3.0.1",
@@ -151,35 +151,35 @@
     "@types/deepmerge": "1.3.3",
     "@types/express": "4.11.1",
     "@types/glob": "5.0.35",
-    "@types/html-webpack-plugin": "2.30.1",
-    "@types/jest": "22.1.1",
+    "@types/html-webpack-plugin": "2.30.2",
+    "@types/jest": "22.1.3",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash": "^4.14.102",
-    "@types/node": "9.4.2",
+    "@types/lodash": "^4.14.104",
+    "@types/node": "9.4.6",
     "@types/serve-favicon": "2.2.30",
-    "@types/webpack": "3.8.5",
+    "@types/webpack": "3.8.8",
     "@types/webpack-dev-middleware": "^2.0.0",
-    "@types/webpack-merge": "4.1.1",
+    "@types/webpack-merge": "4.1.2",
     "@vue/test-utils": "1.0.0-beta.11",
-    "autoprefixer": "7.2.5",
+    "autoprefixer": "8.0.0",
     "axios-mock-adapter": "^1.13.1",
     "babel-preset-env": "^1.6.1",
     "codecov": "3.0.0",
-    "compression-webpack-plugin": "1.1.6",
+    "compression-webpack-plugin": "1.1.7",
     "concurrently": "3.5.1",
-    "copy-webpack-plugin": "4.3.1",
+    "copy-webpack-plugin": "4.4.1",
     "cross-env": "5.1.3",
     "css-loader": "0.28.9",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
-    "cypress": "1.4.2",
+    "cypress": "2.0.1",
     "file-loader": "1.1.6",
     "generate-changelog": "1.7.0",
     "glob": "7.1.2",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "22.2.1",
+    "jest": "22.3.0",
     "jest-vue-preprocessor": "1.3.1",
     "nixt": "0.5.0",
     "node-sass": "4.7.2",
@@ -187,18 +187,18 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "serviceworker-webpack-plugin": "0.2.3",
-    "ts-jest": "22.0.3",
+    "ts-jest": "22.0.4",
     "ts-loader": "3.5.0",
     "tslint": "5.9.1",
-    "typescript": "2.7.1",
+    "typescript": "2.7.2",
     "validate-commit-msg": "2.14.0",
-    "vue-jest": "2.0.1",
+    "vue-jest": "2.1.0",
     "vue-loader": "14.1.1",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.13",
-    "webpack": "3.10.0",
+    "webpack": "3.11.0",
     "webpack-bundle-analyzer": "2.10.0",
-    "webpack-dev-middleware": "2.0.4",
+    "webpack-dev-middleware": "2.0.5",
     "webpack-hot-middleware": "2.21.0",
     "webpack-merge": "4.1.1"
   },
