--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "js-cookie": "2.2.0",
     "lodash": "^4.17.5",
     "lru-cache": "4.1.1",
+    "marked": "^0.3.16",
     "serve-favicon": "2.4.5",
     "vue": "2.5.13",
     "vue-i18n": "7.4.2",
@@ -160,6 +161,7 @@
     "@types/jest": "22.1.3",
     "@types/js-cookie": "2.1.0",
     "@types/lodash": "^4.14.104",
+    "@types/marked": "^0.3.0",
     "@types/node": "9.4.6",
     "@types/serve-favicon": "2.2.30",
     "@types/webpack": "3.8.8",
