feat: add storybook and shared components generator (#56)
closes #41

--- a/package.json
+++ b/package.json
@@ -43,20 +43,22 @@
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'chore: update changelog' && npm version patch && git push origin && git push origin --tags",
     "compile-tools": "./node_modules/.bin/tsc -p ./tools/",
-    "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js",
+    "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js ./storybook-static",
     "start": "node ./dist/server/server.js",
     "dev:dev-server": "webpack -d --config ./config/webpack.dev-server.config.js --progress --hide-modules",
     "dev:server": "webpack -d --config ./config/webpack.server.config.js --progress --hide-modules",
-    "predev": "npm run clean",
+    "predev": "npm run clean && npm run build-storybook",
     "build:client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.config.js",
     "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
-    "prebuild": "npm run clean",
+    "prebuild": "npm run clean && npm run build-storybook",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
     "preci": "npm run build",
     "ci": "concurrently \"npm run lint\" \"npm run test:coverage\"",
-    "postci": "codecov -f ./coverage/*.json"
+    "postci": "codecov -f ./coverage/*.json",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "jest": {
     "globals": {
@@ -151,6 +153,10 @@
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.3.14",
+    "@storybook/addon-links": "^3.3.14",
+    "@storybook/addons": "^3.3.14",
+    "@storybook/vue": "^3.3.14",
     "@types/animejs": "2.0.0",
     "@types/axios-mock-adapter": "^1.10.0",
     "@types/cookie-parser": "1.4.1",
@@ -170,7 +176,9 @@
     "@vue/test-utils": "1.0.0-beta.11",
     "autoprefixer": "8.0.0",
     "axios-mock-adapter": "^1.13.1",
+    "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-vue": "^2.0.1",
     "codecov": "3.0.0",
     "compression-webpack-plugin": "1.1.7",
     "concurrently": "3.5.1",
@@ -194,6 +202,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "serviceworker-webpack-plugin": "0.2.3",
+    "storybook-addon-vue-info": "^0.1.8",
     "ts-jest": "22.0.4",
     "ts-loader": "3.5.0",
     "tslint": "5.9.1",
