--- a/package.json
+++ b/package.json
@@ -140,9 +140,9 @@
     "deepmerge": "2.0.1",
     "express": "4.16.2",
     "js-cookie": "2.2.0",
-    "lodash": "^4.17.5",
+    "lodash": "4.17.5",
     "lru-cache": "4.1.1",
-    "marked": "^0.3.16",
+    "marked": "0.3.16",
     "serve-favicon": "2.4.5",
     "vue": "2.5.13",
     "vue-i18n": "7.4.2",
@@ -153,12 +153,12 @@
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.14",
-    "@storybook/addon-links": "^3.3.14",
-    "@storybook/addons": "^3.3.14",
-    "@storybook/vue": "^3.3.14",
+    "@storybook/addon-actions": "3.3.14",
+    "@storybook/addon-links": "3.3.14",
+    "@storybook/addons": "3.3.14",
+    "@storybook/vue": "3.3.14",
     "@types/animejs": "2.0.0",
-    "@types/axios-mock-adapter": "^1.10.0",
+    "@types/axios-mock-adapter": "1.10.0",
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "1.3.3",
     "@types/express": "4.11.1",
@@ -166,19 +166,19 @@
     "@types/html-webpack-plugin": "2.30.2",
     "@types/jest": "22.1.3",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash": "^4.14.104",
-    "@types/marked": "^0.3.0",
+    "@types/lodash": "4.14.104",
+    "@types/marked": "0.3.0",
     "@types/node": "9.4.6",
     "@types/serve-favicon": "2.2.30",
     "@types/webpack": "3.8.8",
-    "@types/webpack-dev-middleware": "^2.0.0",
+    "@types/webpack-dev-middleware": "2.0.0",
     "@types/webpack-merge": "4.1.2",
     "@vue/test-utils": "1.0.0-beta.11",
     "autoprefixer": "8.0.0",
-    "axios-mock-adapter": "^1.13.1",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-vue": "^2.0.1",
+    "axios-mock-adapter": "1.13.1",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-vue": "2.0.1",
     "codecov": "3.0.0",
     "compression-webpack-plugin": "1.1.7",
     "concurrently": "3.5.1",
@@ -202,7 +202,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "serviceworker-webpack-plugin": "0.2.3",
-    "storybook-addon-vue-info": "^0.1.8",
+    "storybook-addon-vue-info": "0.1.8",
     "ts-jest": "22.0.4",
     "ts-loader": "3.5.0",
     "tslint": "5.9.1",
