refactor(storybook): use @typings instead of custom types
closes #72

--- a/package.json
+++ b/package.json
@@ -54,9 +54,8 @@
     "prebuild": "npm run clean && npm run build-storybook",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint && npm run test",
-    "preci": "npm run build",
     "ci": "concurrently \"npm run lint\" \"npm run test:coverage\"",
-    "postci": "codecov -f ./coverage/*.json",
+    "postci": "npm run build && codecov -f ./coverage/*.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -170,6 +169,8 @@
     "@types/marked": "0.3.0",
     "@types/node": "9.4.6",
     "@types/serve-favicon": "2.2.30",
+    "@types/storybook__addon-actions": "^3.0.2",
+    "@types/storybook__vue": "^3.3.0",
     "@types/webpack": "3.8.8",
     "@types/webpack-dev-middleware": "2.0.0",
     "@types/webpack-merge": "4.1.2",
