--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean && npm run build-storybook",
-    "commitmsg": "validate-commit-msg",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "npm run lint && npm run test",
     "ci": "concurrently \"npm run lint\" \"npm run test:coverage\"",
     "postci": "npm run build && codecov -f ./coverage/*.json",
@@ -78,7 +78,6 @@
       ".(ts|tsx)": "<rootDir>../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "mapCoverage": true,
     "coverageThreshold": {
       "global": {
         "branches": 100,
@@ -94,35 +93,6 @@
     "testURL": "http://localhost:3000"
   },
   "config": {
-    "validate-commit-msg": {
-      "types": [
-        "feat",
-        "fix",
-        "docs",
-        "style",
-        "refactor",
-        "perf",
-        "test",
-        "build",
-        "ci",
-        "chore",
-        "revert"
-      ],
-      "scope": {
-        "required": false,
-        "allowed": [
-          "*"
-        ],
-        "validate": true,
-        "multiple": false
-      },
-      "warnOnFail": false,
-      "maxSubjectLength": 100,
-      "subjectPattern": ".+",
-      "subjectPatternErrorMsg": "subject does not match subject pattern!",
-      "helpMessage": "",
-      "autoFix": false
-    },
     "default-language": "en-EN",
     "supported-languages": [
       "en-EN",
@@ -133,91 +103,92 @@
   "dependencies": {
     "accept-language": "3.0.18",
     "animejs": "2.2.0",
-    "axios": "0.17.1",
-    "compression": "1.7.1",
+    "axios": "0.18.0",
+    "compression": "1.7.2",
     "cookie-parser": "1.4.3",
-    "deepmerge": "2.0.1",
+    "deepmerge": "2.1.0",
     "express": "4.16.2",
     "js-cookie": "2.2.0",
     "lodash": "4.17.5",
-    "lru-cache": "4.1.1",
-    "marked": "0.3.16",
+    "lru-cache": "4.1.2",
+    "marked": "0.3.17",
     "serve-favicon": "2.4.5",
-    "vue": "2.5.13",
-    "vue-i18n": "7.4.2",
+    "vue": "2.5.15",
+    "vue-i18n": "7.5.0",
     "vue-meta": "1.4.3",
     "vue-router": "3.0.1",
-    "vue-server-renderer": "2.5.13",
+    "vue-server-renderer": "2.5.15",
     "vuex": "3.0.1",
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.3.14",
-    "@storybook/addon-links": "3.3.14",
-    "@storybook/addons": "3.3.14",
-    "@storybook/vue": "3.3.14",
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-conventional": "^6.1.3",
+    "@storybook/addon-actions": "3.3.15",
+    "@storybook/addon-links": "3.3.15",
+    "@storybook/addons": "3.3.15",
+    "@storybook/vue": "3.3.15",
     "@types/animejs": "2.0.0",
     "@types/axios-mock-adapter": "1.10.0",
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "1.3.3",
     "@types/express": "4.11.1",
     "@types/glob": "5.0.35",
-    "@types/html-webpack-plugin": "2.30.2",
-    "@types/jest": "22.1.3",
+    "@types/html-webpack-plugin": "2.30.3",
+    "@types/jest": "22.2.0",
     "@types/js-cookie": "2.1.0",
     "@types/lodash": "4.14.104",
     "@types/marked": "0.3.0",
-    "@types/node": "9.4.6",
+    "@types/node": "9.4.7",
     "@types/serve-favicon": "2.2.30",
-    "@types/storybook__addon-actions": "^3.0.2",
-    "@types/storybook__vue": "^3.3.0",
-    "@types/webpack": "3.8.8",
-    "@types/webpack-dev-middleware": "2.0.0",
-    "@types/webpack-merge": "4.1.2",
-    "@vue/test-utils": "1.0.0-beta.11",
-    "autoprefixer": "8.0.0",
-    "axios-mock-adapter": "1.13.1",
+    "@types/storybook__addon-actions": "3.0.3",
+    "@types/storybook__vue": "3.3.0",
+    "@types/webpack": "3.8.10",
+    "@types/webpack-dev-middleware": "2.0.1",
+    "@types/webpack-merge": "4.1.3",
+    "@vue/test-utils": "1.0.0-beta.12",
+    "autoprefixer": "8.1.0",
+    "axios-mock-adapter": "1.14.1",
     "babel-core": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-vue": "2.0.1",
     "codecov": "3.0.0",
-    "compression-webpack-plugin": "1.1.7",
+    "compression-webpack-plugin": "1.1.11",
     "concurrently": "3.5.1",
-    "copy-webpack-plugin": "4.4.1",
-    "cross-env": "5.1.3",
-    "css-loader": "0.28.9",
+    "copy-webpack-plugin": "4.5.1",
+    "cross-env": "5.1.4",
+    "css-loader": "0.28.10",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
-    "cypress": "2.0.1",
-    "file-loader": "1.1.6",
+    "cypress": "2.1.0",
+    "file-loader": "1.1.11",
     "generate-changelog": "1.7.0",
     "glob": "7.1.2",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "3.0.6",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "22.3.0",
+    "jest": "22.4.2",
     "jest-vue-preprocessor": "1.3.1",
     "nixt": "0.5.0",
     "node-sass": "4.7.2",
-    "plop": "1.9.1",
+    "plop": "2.0.0",
     "rimraf": "2.6.2",
-    "sass-loader": "6.0.6",
-    "serviceworker-webpack-plugin": "0.2.3",
+    "sass-loader": "6.0.7",
+    "serviceworker-webpack-plugin": "^0.2.3",
     "storybook-addon-vue-info": "0.1.8",
-    "ts-jest": "22.0.4",
+    "ts-jest": "22.4.1",
     "ts-loader": "3.5.0",
     "tslint": "5.9.1",
     "typescript": "2.7.2",
-    "validate-commit-msg": "2.14.0",
-    "vue-jest": "2.1.0",
-    "vue-loader": "14.1.1",
+    "vue-jest": "2.1.1",
+    "vue-loader": "14.2.1",
     "vue-ssr-webpack-plugin": "3.0.0",
-    "vue-template-compiler": "2.5.13",
+    "vue-template-compiler": "2.5.15",
     "webpack": "3.11.0",
-    "webpack-bundle-analyzer": "2.10.0",
-    "webpack-dev-middleware": "2.0.5",
-    "webpack-hot-middleware": "2.21.0",
-    "webpack-merge": "4.1.1"
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-dev-middleware": "2.0.6",
+    "webpack-hot-middleware": "2.21.2",
+    "webpack-merge": "4.1.2"
   },
   "engines": {
     "node": "8.9.4",
