--- a/package.json
+++ b/package.json
@@ -107,23 +107,23 @@
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
     "deepmerge": "2.1.0",
-    "express": "4.16.2",
+    "express": "4.16.3",
     "js-cookie": "2.2.0",
     "lodash": "4.17.5",
     "lru-cache": "4.1.2",
-    "marked": "0.3.17",
+    "marked": "0.3.18",
     "serve-favicon": "2.4.5",
-    "vue": "2.5.15",
-    "vue-i18n": "7.5.0",
-    "vue-meta": "1.4.3",
+    "vue": "2.5.16",
+    "vue-i18n": "7.6.0",
+    "vue-meta": "1.5.0",
     "vue-router": "3.0.1",
-    "vue-server-renderer": "2.5.15",
+    "vue-server-renderer": "2.5.16",
     "vuex": "3.0.1",
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.1.3",
-    "@commitlint/config-conventional": "^6.1.3",
+    "@commitlint/cli": "6.1.3",
+    "@commitlint/config-conventional": "6.1.3",
     "@storybook/addon-actions": "3.3.15",
     "@storybook/addon-links": "3.3.15",
     "@storybook/addons": "3.3.15",
@@ -174,7 +174,7 @@
     "plop": "2.0.0",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.7",
-    "serviceworker-webpack-plugin": "^0.2.3",
+    "serviceworker-webpack-plugin": "0.2.3",
     "storybook-addon-vue-info": "0.1.8",
     "ts-jest": "22.4.1",
     "ts-loader": "3.5.0",
@@ -183,7 +183,6 @@
     "vue-jest": "2.1.1",
     "vue-loader": "14.2.1",
     "vue-ssr-webpack-plugin": "3.0.0",
-    "vue-template-compiler": "2.5.15",
     "webpack": "3.11.0",
     "webpack-bundle-analyzer": "2.11.1",
     "webpack-dev-middleware": "2.0.6",
