feat: add app config and make it accessible in vuex store (#67)
closes #60

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "animejs": "2.2.0",
     "axios": "0.18.0",
     "compression": "1.7.2",
+    "config": "1.30.0",
     "cookie-parser": "1.4.3",
     "deepmerge": "2.1.0",
     "express": "4.16.3",
@@ -175,7 +176,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "6.0.7",
     "serviceworker-webpack-plugin": "0.2.3",
-    "storybook-addon-vue-info": "0.1.8",
+    "storybook-addon-vue-info": "0.2.0",
     "ts-jest": "22.4.1",
     "ts-loader": "3.5.0",
     "tslint": "5.9.1",
