--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.16",
     "vuex": "3.0.1",
-    "vuex-router-sync": "5.0.0"
+    "vuex-router-sync": "5.0.0",
+    "winston": "2.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
@@ -147,6 +148,7 @@
     "@types/webpack": "3.8.10",
     "@types/webpack-dev-middleware": "2.0.1",
     "@types/webpack-merge": "4.1.3",
+    "@types/winston": "2.3.8",
     "@vue/test-utils": "1.0.0-beta.12",
     "autoprefixer": "8.1.0",
     "axios-mock-adapter": "1.14.1",
