refactor(i18n): remove messages from bundle
closes #101

--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "testURL": "http://localhost:3000"
   },
   "config": {
-    "default-language": "en",
-    "supported-languages": [
+    "default-locale": "en",
+    "supported-locales": [
       "en",
       "de",
       "pt"
