chore: update dependencies (#112)
closes #94

--- a/tools/jest.config.json
+++ b/tools/jest.config.json
@@ -5,7 +5,7 @@
   },
   "rootDir": "./",
   "setupFiles": [
-    "../jestsetup.js"
+    "../jestsetup.ts"
   ],
   "moduleFileExtensions": [
     "js",
