--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
     "test:coverage": "cross-env NODE_ENV=test jest --silent --coverage",
     "test:tools": "cross-env NODE_ENV=test jest --config=./tools/jest.config.json",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --silent",
     "e2e": "cypress run --browser chrome",
     "lint": "tslint -c tslint.json './src/**/*.ts' './tools/**/*.ts'",
     "build": "concurrently \"npm run build:client\" \"npm run build:isomorphic\" \"npm run build:server\"",
@@ -45,12 +45,12 @@
     "compile-tools": "./node_modules/.bin/tsc -p ./tools/",
     "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js ./storybook-static",
     "start": "node ./dist/server/server.js",
-    "dev:dev-server": "webpack -d --config ./config/webpack.dev-server.config.js --progress --hide-modules",
-    "dev:server": "webpack -d --config ./config/webpack.server.config.js --progress --hide-modules",
+    "dev:dev-server": "webpack --mode development --config ./config/webpack.dev-server.config.js --progress --hide-modules",
+    "dev:server": "webpack --mode development --config ./config/webpack.server.config.js --progress --hide-modules",
     "predev": "npm run clean && npm run build-storybook",
-    "build:client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.config.js",
-    "build:isomorphic": "cross-env NODE_ENV=production webpack --config ./config/webpack.isomorphic.config.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.config.js",
+    "build:client": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.client.config.js",
+    "build:isomorphic": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.isomorphic.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean && npm run build-storybook",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "precommit": "concurrently \"npm run lint\" \"npm run test -- --silent\"",
@@ -65,7 +65,7 @@
     },
     "rootDir": "./src",
     "setupFiles": [
-      "../jestsetup.js"
+      "../jestsetup.ts"
     ],
     "moduleFileExtensions": [
       "js",
@@ -112,8 +112,8 @@
     "js-cookie": "2.2.0",
     "lodash": "4.17.5",
     "lru-cache": "4.1.2",
-    "marked": "0.3.18",
-    "serve-favicon": "2.4.5",
+    "marked": "0.3.19",
+    "serve-favicon": "2.5.0",
     "vue": "2.5.16",
     "vue-i18n": "7.6.0",
     "vue-meta": "1.5.0",
@@ -121,76 +121,76 @@
     "vue-server-renderer": "2.5.16",
     "vuex": "3.0.1",
     "vuex-router-sync": "5.0.0",
-    "winston": "2.4.1"
+    "winston": "2.4.2"
   },
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
-    "@storybook/addon-actions": "3.3.15",
-    "@storybook/addon-links": "3.3.15",
-    "@storybook/addons": "3.3.15",
-    "@storybook/vue": "3.3.15",
+    "@storybook/addon-actions": "3.4.2",
+    "@storybook/addon-links": "3.4.2",
+    "@storybook/addons": "3.4.2",
+    "@storybook/vue": "4.0.0-alpha.1",
     "@types/animejs": "2.0.0",
-    "@types/axios-mock-adapter": "1.10.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
-    "@types/deepmerge": "1.3.3",
+    "@types/deepmerge": "2.1.0",
     "@types/express": "4.11.1",
     "@types/glob": "5.0.35",
     "@types/html-webpack-plugin": "2.30.3",
-    "@types/jest": "22.2.0",
+    "@types/jest": "22.2.3",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash": "4.14.104",
+    "@types/lodash": "4.14.107",
     "@types/marked": "0.3.0",
-    "@types/node": "9.4.7",
+    "@types/node": "9.6.6",
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-actions": "3.0.3",
     "@types/storybook__vue": "3.3.0",
-    "@types/webpack": "3.8.10",
+    "@types/webpack": "4.1.3",
     "@types/webpack-dev-middleware": "2.0.1",
     "@types/webpack-merge": "4.1.3",
-    "@types/winston": "2.3.8",
-    "@vue/test-utils": "1.0.0-beta.12",
-    "autoprefixer": "8.1.0",
-    "axios-mock-adapter": "1.14.1",
+    "@types/winston": "2.3.9",
+    "@vue/test-utils": "1.0.0-beta.14",
+    "autoprefixer": "8.3.0",
+    "axios-mock-adapter": "1.15.0",
     "babel-core": "6.26.0",
     "babel-preset-env": "1.6.1",
-    "babel-preset-vue": "2.0.1",
+    "babel-preset-vue": "2.0.2",
     "codecov": "3.0.0",
     "compression-webpack-plugin": "1.1.11",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.5.1",
     "cross-env": "5.1.4",
-    "css-loader": "0.28.10",
+    "css-loader": "0.28.11",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
     "cypress": "2.1.0",
     "file-loader": "1.1.11",
-    "generate-changelog": "1.7.0",
+    "generate-changelog": "1.7.1",
     "glob": "7.1.2",
-    "html-webpack-plugin": "3.0.6",
+    "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "22.4.2",
-    "jest-vue-preprocessor": "1.3.1",
+    "jest": "22.4.3",
+    "jest-vue-preprocessor": "1.4.0",
     "nixt": "0.5.0",
-    "node-sass": "4.7.2",
+    "node-sass": "4.8.3",
     "plop": "2.0.0",
     "rimraf": "2.6.2",
-    "sass-loader": "6.0.7",
-    "serviceworker-webpack-plugin": "0.2.3",
+    "sass-loader": "7.0.1",
+    "serviceworker-webpack-plugin": "1.0.0-alpha01",
     "storybook-addon-vue-info": "0.2.0",
-    "ts-jest": "22.4.1",
-    "ts-loader": "3.5.0",
+    "ts-jest": "22.4.4",
+    "ts-loader": "4.2.0",
     "tslint": "5.9.1",
-    "typescript": "2.7.2",
-    "vue-jest": "2.1.1",
-    "vue-loader": "14.2.1",
+    "typescript": "2.8.3",
+    "vue-jest": "2.5.0",
+    "vue-loader": "14.2.2",
     "vue-ssr-webpack-plugin": "3.0.0",
-    "webpack": "3.11.0",
+    "webpack": "4.6.0",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-dev-middleware": "2.0.6",
-    "webpack-hot-middleware": "2.21.2",
+    "webpack-cli": "2.0.15",
+    "webpack-dev-middleware": "3.1.2",
+    "webpack-hot-middleware": "2.22.1",
     "webpack-merge": "4.1.2"
   },
   "engines": {
