--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "start": "node ./dist/server/server.js",
     "dev:dev-server": "webpack --mode development --config ./config/webpack.dev-server.config.js --progress --hide-modules",
     "dev:server": "webpack --mode development --config ./config/webpack.server.config.js --progress --hide-modules",
-    "predev": "npm run clean && npm run build-storybook",
+    "predev": "npm run clean",
+    "build:spa": "npm run clean && cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.spa.config.js",
     "build:client": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.client.config.js",
     "build:isomorphic": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.server.config.js",
@@ -110,7 +111,7 @@
     "deepmerge": "2.1.0",
     "express": "4.16.3",
     "js-cookie": "2.2.0",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "lru-cache": "4.1.2",
     "marked": "0.3.19",
     "serve-favicon": "2.5.0",
@@ -126,9 +127,9 @@
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
-    "@storybook/addon-actions": "3.4.2",
-    "@storybook/addon-links": "3.4.2",
-    "@storybook/addons": "3.4.2",
+    "@storybook/addon-actions": "3.4.3",
+    "@storybook/addon-links": "3.4.3",
+    "@storybook/addons": "3.4.3",
     "@storybook/vue": "4.0.0-alpha.1",
     "@types/animejs": "2.0.0",
     "@types/compression": "0.0.36",
@@ -139,23 +140,23 @@
     "@types/html-webpack-plugin": "2.30.3",
     "@types/jest": "22.2.3",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash": "4.14.107",
+    "@types/lodash": "4.14.108",
     "@types/marked": "0.3.0",
-    "@types/node": "9.6.6",
+    "@types/node": "10.0.0",
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-actions": "3.0.3",
     "@types/storybook__vue": "3.3.0",
-    "@types/webpack": "4.1.3",
+    "@types/webpack": "4.1.4",
     "@types/webpack-dev-middleware": "2.0.1",
     "@types/webpack-merge": "4.1.3",
     "@types/winston": "2.3.9",
     "@vue/test-utils": "1.0.0-beta.15",
-    "autoprefixer": "8.3.0",
+    "autoprefixer": "8.4.1",
     "axios-mock-adapter": "1.15.0",
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-preset-env": "1.6.1",
     "babel-preset-vue": "2.0.2",
-    "codecov": "3.0.0",
+    "codecov": "3.0.1",
     "compression-webpack-plugin": "1.1.11",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.5.1",
@@ -173,7 +174,7 @@
     "jest": "22.4.3",
     "jest-vue-preprocessor": "1.4.0",
     "nixt": "0.5.0",
-    "node-sass": "4.8.3",
+    "node-sass": "4.9.0",
     "plop": "2.0.0",
     "rimraf": "2.6.2",
     "sass-loader": "7.0.1",
@@ -184,17 +185,17 @@
     "tslint": "5.9.1",
     "typescript": "2.8.3",
     "vue-jest": "2.5.0",
-    "vue-loader": "14.2.2",
+    "vue-loader": "^14.2.2",
     "vue-ssr-webpack-plugin": "3.0.0",
     "webpack": "4.6.0",
     "webpack-bundle-analyzer": "2.11.1",
     "webpack-cli": "2.0.15",
-    "webpack-dev-middleware": "3.1.2",
+    "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.1",
     "webpack-merge": "4.1.2"
   },
   "engines": {
-    "node": "8.9.4",
+    "node": "8.11.1",
     "npm": "5.6.0"
   }
 }
