refactor(vuex): use vuex modules by default (#115)
closes #62, closes #108

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "accept-language": "3.0.18",
     "animejs": "2.2.0",
     "axios": "0.18.0",
+    "body-parser": "1.18.2",
     "compression": "1.7.2",
     "config": "1.30.0",
     "cookie-parser": "1.4.3",
@@ -132,6 +133,7 @@
     "@storybook/addons": "3.4.3",
     "@storybook/vue": "4.0.0-alpha.1",
     "@types/animejs": "2.0.0",
+    "@types/body-parser": "1.16.8",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "2.1.0",
