feat: proper error and 404 pages + SSR (#122)
closes #119

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-starter",
-  "short_name": "vue",
+  "name": "VueStarter",
+  "short_name": "VueStarter",
   "theme_color": "#17BEBB",
   "background_color": "#333333",
   "display": "standalone",
