feat(dev): reload express app on changes (#136)
closes #134

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "g": "npm run generate",
-    "dev": "npm run dev:dev-server && npm run dev:server && node ./dist/server/server.js",
+    "dev": "concurrently \"npm run dev:dev-server\" \"npm run dev:server\"",
     "test:coverage": "cross-env NODE_ENV=test jest --silent --coverage",
     "test:tools": "npm run clean && cross-env NODE_ENV=test jest --config=./tools/jest.config.json",
     "test": "cross-env NODE_ENV=test jest --silent",
@@ -45,8 +45,8 @@
     "compile-tools": "./node_modules/.bin/tsc -p ./tools/",
     "clean": "rimraf ./dist ./coverage ./tools/scripts/*.js ./tools/generators/*.js ./tools/generators/**/*.js ./storybook-static",
     "start": "node ./dist/server/server.js",
-    "dev:dev-server": "webpack --mode development --config ./config/webpack.dev-server.config.js --progress --hide-modules",
-    "dev:server": "webpack --mode development --config ./config/webpack.server.config.js --progress --hide-modules",
+    "dev:dev-server": "cross-env NODE_ENV=development webpack --mode development --config ./config/webpack.dev-server.config.js",
+    "dev:server": "cross-env NODE_ENV=development webpack --mode development --config ./config/webpack.server.config.js",
     "predev": "npm run clean",
     "build:spa": "npm run clean && cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.spa.config.js",
     "build:client": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.client.config.js",
@@ -114,7 +114,7 @@
     "js-cookie": "2.2.0",
     "lodash": "4.17.10",
     "lru-cache": "4.1.3",
-    "marked": "0.3.19",
+    "marked": "0.4.0",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
     "vue": "2.5.16",
@@ -163,7 +163,7 @@
     "compression-webpack-plugin": "1.1.11",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.5.1",
-    "cross-env": "5.1.5",
+    "cross-env": "5.1.6",
     "css-loader": "0.28.11",
     "css-mqpacker": "6.0.2",
     "cssnano": "3.10.0",
@@ -179,26 +179,28 @@
     "node-sass": "4.9.0",
     "plop": "2.0.0",
     "postcss-loader": "2.1.5",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "rimraf": "2.6.2",
     "sass-loader": "7.0.1",
     "serviceworker-webpack-plugin": "1.0.0-alpha02",
+    "start-server-webpack-plugin": "2.2.5",
     "storybook-addon-vue-info": "0.4.1",
     "ts-jest": "22.4.6",
     "ts-loader": "4.3.0",
     "tslint": "5.10.0",
     "typescript": "2.8.3",
     "vue-jest": "2.6.0",
-    "vue-loader": "15.1.0",
+    "vue-loader": "15.2.0",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.16",
     "webpack": "4.8.3",
-    "webpack-bundle-analyzer": "2.12.0",
-    "webpack-cli": "2.1.3",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "2.1.4",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
-    "webpack-merge": "4.1.2"
+    "webpack-merge": "4.1.2",
+    "webpack-node-externals": "1.7.2"
   },
   "engines": {
     "node": "8.11.1",
