fix: update engines to match README (#209)
fixes #208

--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "webpack-node-externals": "1.7.2"
   },
   "engines": {
-    "node": "8.11.1",
-    "npm": "5.6.0"
+    "node": ">=8.0.0",
+    "npm": ">=5.0.0"
   }
 }
