chore: update dependencies (#224)

--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
-    "coverageDirectory": "../coverage",
-    "testURL": "http://localhost:3000"
+    "coverageDirectory": "../coverage"
   },
   "config": {
     "default-locale": "en",
@@ -109,29 +108,29 @@
     "animejs": "2.2.0",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
-    "compression": "1.7.2",
-    "config": "1.30.0",
+    "compression": "1.7.3",
+    "config": "2.0.1",
     "cookie-parser": "1.4.3",
     "deepmerge": "2.1.1",
     "express": "4.16.3",
     "js-cookie": "2.2.0",
     "lodash": "4.17.10",
     "lru-cache": "4.1.3",
-    "marked": "0.4.0",
+    "marked": "0.5.0",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
-    "vue": "2.5.16",
-    "vue-i18n": "8.0.0",
-    "vue-meta": "1.5.0",
+    "vue": "2.5.17",
+    "vue-i18n": "8.1.0",
+    "vue-meta": "1.5.3",
     "vue-router": "3.0.1",
-    "vue-server-renderer": "2.5.16",
+    "vue-server-renderer": "2.5.17",
     "vuex": "3.0.1",
     "vuex-router-sync": "5.0.0",
-    "winston": "3.0.0"
+    "winston": "3.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.0.0",
-    "@commitlint/config-conventional": "7.0.1",
+    "@commitlint/cli": "7.1.2",
+    "@commitlint/config-conventional": "7.1.2",
     "@storybook/addon-actions": "4.0.0-alpha.10",
     "@storybook/addon-links": "4.0.0-alpha.10",
     "@storybook/addons": "4.0.0-alpha.10",
@@ -143,66 +142,65 @@
     "@types/deepmerge": "2.1.0",
     "@types/express": "4.16.0",
     "@types/glob": "5.0.35",
-    "@types/html-webpack-plugin": "2.30.3",
-    "@types/jest": "23.1.3",
+    "@types/jest": "23.3.1",
     "@types/js-cookie": "2.1.0",
-    "@types/lodash": "4.14.110",
-    "@types/marked": "0.4.0",
-    "@types/node": "10.5.0",
+    "@types/lodash": "4.14.116",
+    "@types/marked": "0.4.1",
+    "@types/node": "10.9.4",
     "@types/serve-favicon": "2.2.30",
-    "@types/storybook__addon-actions": "3.0.3",
+    "@types/storybook__addon-actions": "3.4.1",
     "@types/storybook__vue": "3.3.0",
-    "@types/webpack": "4.4.4",
-    "@types/webpack-dev-middleware": "2.0.1",
+    "@types/webpack": "4.4.11",
+    "@types/webpack-dev-middleware": "2.0.2",
     "@types/webpack-merge": "4.1.3",
-    "@types/winston": "2.3.9",
-    "@vue/test-utils": "1.0.0-beta.20",
-    "autoprefixer": "8.6.4",
+    "@vue/test-utils": "1.0.0-beta.24",
+    "autoprefixer": "9.1.5",
     "axios-mock-adapter": "1.15.0",
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-vue": "2.0.2",
-    "codecov": "3.0.2",
-    "compression-webpack-plugin": "1.1.11",
-    "concurrently": "3.6.0",
+    "codecov": "3.1.0",
+    "compression-webpack-plugin": "2.0.0",
+    "concurrently": "4.0.1",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.2.0",
-    "css-loader": "0.28.11",
-    "css-mqpacker": "6.0.2",
-    "cssnano": "3.10.0",
-    "cypress": "3.0.2",
-    "file-loader": "1.1.11",
+    "css-loader": "1.0.0",
+    "css-mqpacker": "7.0.0",
+    "cssnano": "4.1.0",
+    "cypress": "3.1.0",
+    "file-loader": "2.0.0",
     "generate-changelog": "1.7.1",
-    "glob": "7.1.2",
+    "glob": "7.1.3",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.2.0",
+    "jest": "23.5.0",
     "jest-vue-preprocessor": "1.4.0",
-    "node-sass": "4.9.2",
-    "plop": "2.0.0",
-    "postcss-loader": "2.1.5",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "jsdom": "11.11.0",
+    "node-sass": "4.9.3",
+    "plop": "2.1.0",
+    "postcss-loader": "3.0.0",
+    "react": "16.5.0",
+    "react-dom": "16.5.0",
     "rimraf": "2.6.2",
-    "sass-loader": "7.0.3",
-    "serviceworker-webpack-plugin": "1.0.0-alpha02",
+    "sass-loader": "7.1.0",
+    "serviceworker-webpack-plugin": "1.0.1",
     "start-server-webpack-plugin": "2.2.5",
-    "storybook-addon-vue-info": "0.4.3",
+    "storybook-addon-vue-info": "0.6.1",
     "ts-jest": "22.4.6",
-    "ts-loader": "4.4.2",
-    "tslint": "5.10.0",
-    "typescript": "2.9.2",
+    "ts-loader": "4.5.0",
+    "tslint": "5.11.0",
+    "typescript": "3.0.3",
     "vue-jest": "2.6.0",
-    "vue-loader": "15.2.4",
+    "vue-loader": "15.4.1",
     "vue-ssr-webpack-plugin": "3.0.0",
-    "vue-template-compiler": "2.5.16",
-    "webpack": "4.12.2",
+    "vue-template-compiler": "2.5.17",
+    "webpack": "4.17.2",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.0.8",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.2",
-    "webpack-merge": "4.1.3",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-middleware": "3.2.0",
+    "webpack-hot-middleware": "2.23.1",
+    "webpack-merge": "4.1.4",
     "webpack-node-externals": "1.7.2"
   },
   "engines": {
