refactor(dev): add type checking and linting (#238)
closes #235, related to #219

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
   "include": [
     "./config/*",
-    "./src/**/*"
+    "./src/**/*",
+    "./src/**/*.vue"
   ],
   "exclude": [
     "./node_modules",
