--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "g": "npm run generate",
-    "dev": "concurrently \"npm run dev:dev-server\" \"npm run dev:server\"",
+    "dev": "npm run dev:dev-server && npm run dev:server",
     "test:coverage": "cross-env NODE_ENV=test jest --silent --coverage",
     "test:tools": "npm run clean && cross-env NODE_ENV=test jest --config=./tools/jest.config.json",
     "test": "cross-env NODE_ENV=test jest --silent",
@@ -54,8 +54,6 @@
     "build:isomorphic": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.isomorphic.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --mode production --config ./config/webpack.server.config.js",
     "prebuild": "npm run clean",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
-    "precommit": "concurrently \"npm run lint\" \"npm run test -- --silent\"",
     "ci": "concurrently \"npm run lint\" \"npm run test:coverage -- --runInBand\"",
     "postci": "codecov -f ./coverage/*.json && npm run build && concurrently \"npm run build-storybook\" \"vuepress build docs\"",
     "storybook": "start-storybook -p 6006",
@@ -114,14 +112,14 @@
     "deepmerge": "2.1.1",
     "express": "4.16.3",
     "js-cookie": "2.2.0",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "lru-cache": "4.1.3",
-    "marked": "0.5.0",
+    "marked": "0.5.1",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
     "vue": "2.5.17",
     "vue-i18n": "8.1.0",
-    "vue-meta": "1.5.3",
+    "vue-meta": "1.5.5",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.17",
     "vuex": "3.0.1",
@@ -141,16 +139,16 @@
     "@types/cookie-parser": "1.4.1",
     "@types/deepmerge": "2.1.0",
     "@types/express": "4.16.0",
-    "@types/glob": "5.0.35",
-    "@types/jest": "23.3.1",
-    "@types/js-cookie": "2.1.0",
+    "@types/glob": "7.1.1",
+    "@types/jest": "23.3.2",
+    "@types/js-cookie": "2.2.0",
     "@types/lodash": "4.14.116",
     "@types/marked": "0.4.1",
-    "@types/node": "10.9.4",
+    "@types/node": "10.11.3",
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-actions": "3.4.1",
     "@types/storybook__vue": "3.3.0",
-    "@types/webpack": "4.4.11",
+    "@types/webpack": "4.4.13",
     "@types/webpack-dev-middleware": "2.0.2",
     "@types/webpack-merge": "4.1.3",
     "@vue/test-utils": "1.0.0-beta.24",
@@ -166,46 +164,53 @@
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
     "css-mqpacker": "7.0.0",
-    "cssnano": "4.1.0",
+    "cssnano": "4.1.4",
     "cypress": "3.1.0",
     "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin": "0.4.9",
     "generate-changelog": "1.7.1",
     "glob": "7.1.3",
     "html-webpack-plugin": "3.2.0",
-    "husky": "0.14.3",
+    "husky": "1.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.5.0",
+    "jest": "23.6.0",
     "jest-vue-preprocessor": "1.4.0",
     "jsdom": "11.11.0",
     "node-sass": "4.9.3",
     "plop": "2.1.0",
     "postcss-loader": "3.0.0",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "serviceworker-webpack-plugin": "1.0.1",
     "start-server-webpack-plugin": "2.2.5",
-    "storybook-addon-vue-info": "0.6.1",
+    "storybook-addon-vue-info": "0.6.2",
     "storybook-vue-router": "1.0.1",
     "ts-jest": "22.4.6",
-    "ts-loader": "4.5.0",
+    "ts-loader": "5.2.1",
     "tslint": "5.11.0",
-    "typescript": "3.0.3",
+    "typescript": "3.1.1",
     "vue-jest": "2.6.0",
-    "vue-loader": "15.4.1",
+    "vue-loader": "15.4.2",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.17",
-    "webpack": "4.17.2",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-middleware": "3.2.0",
-    "webpack-hot-middleware": "2.23.1",
+    "webpack": "4.20.2",
+    "webpack-bundle-analyzer": "3.0.2",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.2",
     "webpack-merge": "4.1.4",
     "webpack-node-externals": "1.7.2"
   },
   "engines": {
     "node": ">=8.0.0",
     "npm": ">=5.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-commit": "concurrently \"npm run lint\" \"npm run test -- --silent\""
+    }
   }
 }
