chore: add new contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -92,6 +92,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jmcdo29",
+      "name": "Jay McDoniel",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/28268680?v=4",
+      "profile": "https://github.com/jmcdo29",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
