test(vuex-persist): replace localStorage with mock implementation (#272)
closes #270

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -117,7 +117,7 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/7151993?v=4",
       "profile": "https://github.com/glederer",
       "contributions": [
-        "translation"
+        "doc"
       ]
     }
   ]
